--- a/frontend/cmd/server/templates/base.gohtml
+++ b/frontend/cmd/server/templates/base.gohtml
@@ -54,6 +54,7 @@
             <a class="{{if eq .Path "/playlists" }}text-primary{{end}} hover:underline" href="/playlists">Playlists</a>
             <a class="{{if eq .Path "/event" }}text-primary{{end}} hover:underline" href="/event">Event</a>
             <a id="nav-me" class="{{if eq .Path "/me" }}text-primary{{end}} hover:underline" href="/me" style="display: none;">Me</a>
+            <a id="nav-friends" class="{{if eq .Path "/friends" }}text-primary{{end}} hover:underline" href="/friends" style="display: none;">Friends</a>
             <a id="nav-logout" class="hover:underline" href="#" style="display: none;">Logout</a>
           </nav>
         </div>
@@ -66,17 +67,20 @@
       function updateHeader() {
         const navAuth = document.getElementById("nav-auth");
         const navMe = document.getElementById("nav-me");
+        const navFriends = document.getElementById("nav-friends");
         const navLogout = document.getElementById("nav-logout");
 
         if (authService.isLoggedIn()) {
           navAuth.style.display = "none";
           navMe.style.display = "block";
+          navFriends.style.display = "block";
           navLogout.style.display = "block";
           navLogout.addEventListener("click", authService.logout);
           authService.scheduleTokenRefresh();
         } else {
           navAuth.style.display = "block";
           navMe.style.display = "none";
+          navFriends.style.display = "none";
           navLogout.style.display = "none";
         }
       }
